--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./
+        working-directory: 
 
     steps:
     - uses: actions/checkout@v3
@@ -45,5 +45,5 @@ jobs:
     - name: Git status
       run: git status
     - name: Commit and push
-      run: git add -A && git commit -m "Dataset Pull Automatic Trigger" && git push origin main
+      run: git add -A && git commit -m "Dataset Pull Automatic Trigger" && git push origin automate-workflow
 
